platform/ingress-virtual-services/kiali-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-virtual-service
  namespace: istio-system
spec:
  hosts:
    - kiali.super-fortnight.com
  gateways:
    - observability-gateway
  http:
    - route:
        - destination:
            host: kiali.observability.svc.cluster.local
            port:
              number: 20001
