platform/ingress-virtual-services/prometheus-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-virtual-service
  namespace: istio-system
spec:
  hosts:
    - prometheus.super-fortnight.com
  gateways:
    - observability-gateway
  http:
    - route:
        - destination:
            host: prometheus-server.observability.svc.cluster.local
            port:
              number: 80
